feat: campgroup page

--- a/src/styles/default.less
+++ b/src/styles/default.less
@@ -113,3 +113,26 @@ img {
   border-radius: 8px;
   padding: 20px;
 }
+
+.el-transfer {
+  --el-transfer-panel-width: 400px;
+  .el-transfer-panel__header {
+    .el-checkbox{
+      .el-checkbox__input {
+        display: none;
+      }
+      .el-checkbox__label {
+        font-size: 13px;
+      }
+    }
+  }
+  .el-transfer-panel__body{
+    .el-checkbox-group {
+      .el-checkbox {
+        .el-checkbox__label {
+          font-size: 13px;
+        }
+      }
+    }
+  }
+}
