--- a/src/styles/default.less
+++ b/src/styles/default.less
@@ -9,6 +9,12 @@
   --el-color-danger: #db3f70;
 }
 
+ul {
+  li {
+    list-style: none;
+  }
+}
+
 img {
   max-width: 100%;
   vertical-align: middle;
