updata: components and api
add overview and compareByDate API. update MyTable, FilesSaver, MyTabber.

--- a/src/styles/default.less
+++ b/src/styles/default.less
@@ -117,7 +117,7 @@ img {
   -webkit-box-shadow: 0 8px 16px #e5e6ed;
   box-shadow: 0 8px 16px #e5e6ed;
   border-radius: 8px;
-  padding: 20px;
+  padding: 20px 0px;
 }
 
 .el-transfer {
